--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <ul>
          <li>Vagrant: generacion de maquinas </li>
          <li>Docker: creando contaniner </li>
-         <li>Ansible: transformacion </li>
+         <li>Ansible: transformacion ansible </li>
          <li>Integración continua: Madurez y productividad en el desarrollo de software </li>
-         <li>Kubernetes: full</li>
+         <li>Kubernetes: full ther</li>
      </ul>
 </body>
 </html>
